@@ -559,6 +559,11 @@ Possible values are :<br>
 Default is "HEAD"</td>
 <td>no</td>
 </tr>
+<tr>
+<td>makeParents</td>
+<td>Create parents first (only useful for copies from srcUrl to destUrl. Defaults to false.</td>
+<td>no</td>
+</tr>
 </table>
 </div>
 <![CDATA[=========================================================]]>
